--- a/index.html
+++ b/index.html
@@ -167,21 +167,32 @@ forget conventional laboratory setup.</pre></h3>
         <hr>
         <div class="foot">
             <div class="logo">
-                
+                <img src="/home/meiarasu/Desktop/Neo/Training/clone/logo.png" width="250px" height="150px">
             </div>
             <div class="list1">
-
+                <h2>Important Pages</h2>
+                <h3>Home</h3>
+                <h3>Features</h3>
+                <h3>Use Cases</h3>
+                <h3>Client Base</h3>
+                <h3>Book a free demo</h3>
             </div>
             <div class="list2">
-
+                <h2>Contact Info</h2>
+                <h3 style="font-weight: bold;">Address</h3>
+                <h3>PSG STEP, E Block, 3rd Floor, Peelamedu, Coimbatore- 04</h3>
+                <h3 style="font-weight: bold;">Phone</h3>
+                <h3>+91-701-004-5799</h3>
+                <h3 style="font-weight: bold;">Email</h3>
+                <h3>elon@iamneo.ai</h3>
             </div>
         </div>
         <div class="footer">
             <div class="cr">
-
+                <h3>Copyright @ 2021 Neo Colab</h3>
             </div>
             <div class="pow">
-
+                <h3>Powered by iamneo.ai</h3>
             </div>
         </div>
     </body>
